# ext2-filesystem

./: .gitignore  Allocation.c  Allocation.h  Bitmap.c  Bitmap.h  BlockGroup.c  BlockGroup.h  CMakeLists.txt  Directory.c  Directory.h  Inode.c  Inode.h  Superblock.c  Superblock.h  ext2-filesystem.sln  ext2-filesystem.sln.DotSettings  globals.h  main.c
Filesystem/: Bitmap.cs  Class1.cs  Disk.cs  DiskFormatter.cs  FileSystem.cs  SuperblockReader.cs  SuperblockWriter.cs  TestImageBuilder.cs
Filesystem/Enums/: ErrorHandling.cs  FileSystemState.cs  InodeDirectoryType.cs  InodeFlags.cs  InodePermissions.cs  InodeType.cs  OperatingSystemID.cs
Filesystem/Exceptions/: SuperblockFormatException.cs
Filesystem/Mapping/: BlockGroupDescriptorMapper.cs  InodeDirectoryMapper.cs  InodeMapper.cs  SuperblockMapper.cs
Filesystem/Models/: BinaryBlockGroupDescriptor.cs  BinaryInode.cs  BinaryInodeDirectory.cs  BinarySuperblock.cs  BlockGroupDescriptor.cs  ErrorHandling.cs  FileSystemState.cs  Inode.cs  InodeDirectory.cs  InodeDirectoryType.cs  InodeFlags.cs  InodePermissions.cs  InodeType.cs  OperatingSystemID.cs  Superblock.cs
Filesystem/Serializers/: BlockGroupDescriptorSerialization.cs  InodeDirectorySerialization.cs  InodeSerialiation.cs  SuperblockSerialization.cs
Filesystem/Services/: BlockGroupDescriptorService.cs  IBlockGroupDescriptorService.cs  IInodeService.cs  ISuperblockService.cs  (+2 more)
FilesystemConsole/: FilesystemConsole.csproj  Program.cs
FilesystemTests/: BlockGroupDescriptorSerializationTests.cs  DiskTests.cs  FileSystemTests.cs  FilesystemTests.csproj  InodeDirectorySerializationTests.cs  InodeSerializationTests.cs  SuperblockReaderTests.cs  SuperblockSerializationTests.cs  TestImageBuilder.cs  UnitTest1.cs
include/: allocation.h  bitmap.h  block_group.h  directory.h  filesystem.h  globals.h  inode.h  superblock.h  types.h
src/: CMakeLists.txt  allocation.c  bitmap.c  block_group.c  directory.c  filesystem.c  inode.c  main.c  superblock.c
tests/: CMakeLists.txt  test_allocation.c  test_bitmap.c  test_block_group.c  test_directory.c  test_inode.c  test_superblock.c
(+8 files in other folders)
